Correct our repository URL to use HTTPS, bump groovy-compiler dependencies as bintray wen't offline